# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "tinydyn_derive"
version = "0.1.0"
description = "Derive glue for tinydyn, a lightweight dynamic dispatch library"
license = "Apache-2.0"
repository = "https://github.com/kupiakos/tinydyn/derive/"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full", "fold"] }
proc-macro2 = "1"